--- a/sl/info.html
+++ b/sl/info.html
@@ -166,7 +166,7 @@
                     <a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
                         data-target="menu">
                         <i class="fab fa-instagram"></i></a>
-                    <a href="javascript:void(0);" class="icon" data-target="menu">
+                    <a href="https://www.facebook.com/trail3v.eu/" class="icon" data-target="menu">
                         <i class="fab fa-facebook-square"></i></a>
                 </div>
             </div>
