--- a/sl/proge/go3v-28km.html
+++ b/sl/proge/go3v-28km.html
@@ -220,7 +220,7 @@
                     <a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
                         data-target="menu">
                         <i class="fab fa-instagram"></i></a>
-                    <a href="javascript:void(0);" class="icon" data-target="menu">
+                    <a href="https://www.facebook.com/trail3v.eu/" class="icon" data-target="menu">
                         <i class="fab fa-facebook-square"></i></a>
                 </div>
             </div>
@@ -229,7 +229,7 @@
         <!--Footer-->
         <footer id="main-footer" class="grid">
             <div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer"
-                    class="btn"></a>Teo Winkler</a></div>
+                    class="btn">Teo Winkler</a></div>
         </footer>
     </div>
 
