--- a/en/contact-us.html
+++ b/en/contact-us.html
@@ -87,9 +87,9 @@
 
         <!--Footer-->
         <div class="icon-container">
-            <a href="javascript:void(0);" class="icon" data-target="menu">
+            <a href="https://www.instagram.com/go4trail/" class="icon" data-target="menu">
                 <i class="fab fa-instagram"></i></a>
-            <a href="javascript:void(0);" class="icon" data-target="menu">
+            <a href="https://www.facebook.com/trail3v.eu/" class="icon" data-target="menu">
                 <i class="fab fa-facebook-square"></i></a>
         </div>
         <footer id="main-footer" class="grid flex-footer">
