--- a/sl/proge/go3v-28km.html
+++ b/sl/proge/go3v-28km.html
@@ -228,8 +228,8 @@
 
         <!--Footer-->
         <footer id="main-footer" class="grid">
-            <div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer"
-                    class="btn">Teo Winkler</a></div>
+            <div>Tek treh vrhov | by <a href="https://teowinkler.com" target="_blank" rel="noopener noreferrer">Teo
+                    Winkler</a></div>
         </footer>
     </div>
 
