--- a/sl/proge/go3v-28km.html
+++ b/sl/proge/go3v-28km.html
@@ -220,7 +220,7 @@
                     <a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
                         data-target="menu">
                         <i class="fab fa-instagram"></i></a>
-                    <a href="https://www.facebook.com/trail3v.eu/" class="icon" data-target="menu">
+                    <a href="https://www.facebook.com/trail3v.eu/" target="_blank" class="icon" data-target="menu">
                         <i class="fab fa-facebook-square"></i></a>
                 </div>
             </div>
