fix bug remove overflow from menu

--- a/sl/proge/index.html
+++ b/sl/proge/index.html
@@ -77,7 +77,7 @@
                 <li class="content-wrap">
                     <p class="opening">
                         Ste izkušen tekač, občasni rekreativec ali pa si samo želite novih
-                        doživetij? Za vsakega se nekaj najde. Tu so proge, ki smo jih pripravili za vas.
+                        doživetij? Za vsakega se nekaj najde. Poglejte si proge, ki smo jih pripravili za vas.
                     </p>
                 </li>
                 <li id="race-1">
