--- a/en/races/ultra-58km.html
+++ b/en/races/ultra-58km.html
@@ -29,7 +29,7 @@
 
 <body>
     <!--Navigation bar-->
-    <div id="navigation-bar" class="fixed-bar">
+    <div id="navigation-bar">
         <!--add home button on the left-->
         <div class="home-container">
             <a href="/en/index.html" id="logo">T3V</a> </div>
