--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="keywords" content="trail, tek, slovenija, sabotin, škabrijel, sveta gora">
-    <meta name="description" content="Tek treh vrhov | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
+    <meta name="description"
+        content="Tek treh vrhov | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
     <title>Tek treh vrhov</title>
     <!--styles-->
     <link rel="stylesheet" href="styles/main.css">
@@ -27,39 +28,41 @@
 </head>
 
 <body>
-    <!--Navigation bar-->
-    <div id="navigation-bar" class="fixed-bar clear-bar">
-        <!--add home button on the left-->
-        <div class="home-container">
-            <a href="index.html" id="logo">T3V</a>
-        </div>
-        <div class="menu-icon-container">
-            <button class="menu-icon" data-target="menu">
-                <i class="fas fa-bars" id="menu-button"></i>
-            </button>
-        </div>
-
-        <!--menu content-->
-        <div id="menu">
-            <a id="close-button">&times;</a>
-
-            <ul class="menu-content">
-                <li><a href="sl/info.html" class="menu-link">Info</a></li>
-                <li><a href="sl/proge/index.html" class="menu-link" id="races-button">Proge</a></li>
-                <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
-                        class="menu-link">Prijava</a></li>
-                <li><a href="sl/o-nas.html" class="menu-link">O nas</a></li>
-                <li><a href="sl/kontakt.html" class="menu-link">Kontakt</a></li>
-                <li><a href="/en/index.html" class="language-switch menu-link">EN <i class="fas fa-globe"></i></a>
-                </li>
-            </ul>
-        </div>
-
-    </div>
     <!--Header-->
     <header id="showcase">
         <div class="hero-image">
             <img src="assets/images/showcase-5.jpg" alt="Tek treh vrhov - hero image">
+
+            <!--Navigation bar-->
+            <div id="navigation-bar" class="fixed-bar clear-bar">
+                <!--add home button on the left-->
+                <div class="home-container">
+                    <a href="index.html" id="logo">T3V</a>
+                </div>
+                <div class="menu-icon-container">
+                    <button class="menu-icon" data-target="menu">
+                        <i class="fas fa-bars" id="menu-button"></i>
+                    </button>
+                </div>
+
+                <!--menu content-->
+                <div id="menu">
+                    <a id="close-button">&times;</a>
+
+                    <ul class="menu-content">
+                        <li><a href="sl/info.html" class="menu-link">Info</a></li>
+                        <li><a href="sl/proge/index.html" class="menu-link" id="races-button">Proge</a></li>
+                        <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
+                                class="menu-link">Prijava</a></li>
+                        <li><a href="sl/o-nas.html" class="menu-link">O nas</a></li>
+                        <li><a href="sl/kontakt.html" class="menu-link">Kontakt</a></li>
+                        <li><a href="/en/index.html" class="language-switch menu-link">EN <i
+                                    class="fas fa-globe"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            
             <div class="text-wrap grid">
                 <span class="big-headline content-wrap">
                     Tek treh vrhov
@@ -84,8 +87,9 @@
         <section class="section-b grid">
             <div class="content-wrap center">
                 <h1 class="content-title">Tek med preteklostjo in prihodnostjo</h1>
-                <p class="landing-page-text"> 
-                    Sabotin, Škabrijel in Sveta Gora so v samem središču našega doživetja. Vzpetine, ki so nekoč ločevale, nas danes združujejo. Čez njihove vrhove smo postavili tri proge. Ste že izbrali svojo?
+                <p class="landing-page-text">
+                    Sabotin, Škabrijel in Sveta Gora so v samem središču našega doživetja. Vzpetine, ki so nekoč
+                    ločevale, nas danes združujejo. Čez njihove vrhove smo postavili tri proge. Ste že izbrali svojo?
                 </p>
             </div>
         </section>
