--- a/index.html
+++ b/index.html
@@ -28,12 +28,39 @@
 </head>
 
 <body>
+    <!--Navigation bar-->
+    <div id="navigation-bar" class="fixed-bar clear-bar">
+        <!--add home button on the left-->
+        <div class="home-container">
+            <a href="index.html" id="logo">T3V</a>
+        </div>
+        <div class="menu-icon-container">
+            <button class="menu-icon" data-target="menu">
+                <i class="fas fa-bars" id="menu-button"></i>
+            </button>
+        </div>
 
+        <!--menu content-->
+        <div id="menu">
+            <a id="close-button">&times;</a>
+
+            <ul class="menu-content">
+                <li><a href="sl/info.html" class="menu-link">Info</a></li>
+                <li><a href="sl/proge/index.html" class="menu-link" id="races-button">Proge</a></li>
+                <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
+                        class="menu-link">Prijava</a></li>
+                <li><a href="sl/o-nas.html" class="menu-link">O nas</a></li>
+                <li><a href="sl/kontakt.html" class="menu-link">Kontakt</a></li>
+                <li><a href="/en/index.html" class="language-switch menu-link">EN <i class="fas fa-globe"></i></a>
+                </li>
+            </ul>
+        </div>
+    </div>
     <!--Header-->
     <header id="showcase">
         <div class="hero-image">
             <img src="assets/images/showcase-5.jpg" alt="Tek treh vrhov - hero image">
-            
+
             <div class="text-wrap grid">
                 <span class="big-headline content-wrap">
                     Tek treh vrhov
