hero-image without height test

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     </div>
     <!--Header-->
     <header id="showcase">
+        <div class="hero-image">
 
             <div class="text-wrap grid">
                 <span class="big-headline content-wrap">
@@ -65,6 +66,7 @@
                 </span>
             </div>
 
+        </div>
     </header>
 
     <!--Main-->
