--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!--Header-->
     <header id="showcase">
         <div class="hero-image">
-
+            <img src="../assets/images/showcase-5.jpg" alt="Tek treh vrhov - hero image">
             <div class="text-wrap grid">
                 <span class="big-headline content-wrap">
                     Tek treh vrhov
