add prices, remove indexhtml from url

--- a/en/about.html
+++ b/en/about.html
@@ -32,7 +32,7 @@
     <div id="navigation-bar">
         <!--add home button on the left-->
         <div class="home-container">
-            <a href="/en/index.html" id="logo">T3V</a>
+            <a href="/en" id="logo">T3V</a>
         </div>
         <div class="menu-icon-container">
             <button class="menu-icon" data-target="menu">
@@ -46,7 +46,7 @@
             <a id="close-button">&times;</a>
             <ul class="menu-content">
                 <li><a href="faq.html" class="menu-link">FAQ</a></li>
-                <li><a href="races/index.html" class="menu-link" id="races-button">Races</a></li>
+                <li><a href="races" class="menu-link" id="races-button">Races</a></li>
                 <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Registration</a></li>
                 <li><a href="about.html" class="menu-link">About</a></li>
