--- a/en/index.html
+++ b/en/index.html
@@ -32,7 +32,7 @@
     <div id="navigation-bar" class="fixed-bar clear-bar">
         <!--add home button on the left-->
         <div class="home-container">
-            <a href="index.html" id="logo">T3V</a>
+            <a href="/" id="logo">T3V</a>
         </div>
         <div class="menu-icon-container">
             <button class="menu-icon" data-target="menu">
@@ -46,12 +46,12 @@
 
             <ul class="menu-content">
                 <li><a href="faq.html" class="menu-link">FAQ</a></li>
-                <li><a href="/en/races/index.html" class="menu-link" id="races-button">Races</a></li>
+                <li><a href="/en/races" class="menu-link" id="races-button">Races</a></li>
                 <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Registration</a></li>
                 <li><a href="about.html" class="menu-link">About</a></li>
                 <li><a href="contact-us.html" class="menu-link">Contact</a></li>
-                <li><a href="/index.html" class="language-switch menu-link">Sl <i class="fas fa-globe"></i></a>
+                <li><a href="/" class="language-switch menu-link">Sl <i class="fas fa-globe"></i></a>
                 </li>
             </ul>
         </div>
