--- a/en/races/index.html
+++ b/en/races/index.html
@@ -31,7 +31,7 @@
     <div id="navigation-bar">
         <!--add home button on the left-->
         <div class="home-container">
-            <a href="/en/index.html" id="logo">T3V</a>
+            <a href="/en" id="logo">T3V</a>
         </div>
         <div class="menu-icon-container">
             <button class="menu-icon" data-target="menu">
@@ -49,7 +49,7 @@
                         class="menu-link">Registration</a></li>
                 <li><a href="/en/about.html" class="menu-link">About</a></li>
                 <li><a href="/en/contact-us.html" class="menu-link">Contact</a></li>
-                <li><a href="/sl/proge/index.html" class="language-switch menu-link">SI <i
+                <li><a href="/sl/proge" class="language-switch menu-link">SI <i
                             class="fas fa-globe"></i></a></li>
             </ul>
         </div>
