--- a/en/races/ultra-58km.html
+++ b/en/races/ultra-58km.html
@@ -32,7 +32,7 @@
     <div id="navigation-bar">
         <!--add home button on the left-->
         <div class="home-container">
-            <a href="/en/index.html" id="logo">T3V</a> </div>
+            <a href="/en" id="logo">T3V</a> </div>
         <div class="menu-icon-container">
             <button class="menu-icon" data-target="menu">
                 <i class="fas fa-bars" id="menu-button"></i>
@@ -45,7 +45,7 @@
             <a id="close-button">&times;</a>
             <ul class="menu-content">
                 <li><a href="/en/faq.html" class="menu-link">FAQ</a></li>
-                <li><a href="/en/races/index.html" class="menu-link" id="races-button">Races</a></li>
+                <li><a href="/en/races" class="menu-link" id="races-button">Races</a></li>
                 <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Registration</a></li>
                 <li><a href="/en/about.html" class="menu-link">About</a></li>
@@ -122,8 +122,8 @@
                 <h2>Entry fee</h2>
                 <ul class="price">
                     <li>until 1st July 2020: <b>40 €</b></li>
-                    <li>until 30th September 2020: <b>50 €</b></li>
-                    <li>until the day of the event: <b>60 €</b></li>
+                    <li>until 30th September 2020: <b>49 €</b></li>
+                    <li>until the day of the event: <b>65 €</b></li>
                     <li class="small-text">* If registrations are not filled up you can register on the day of the
                         event. In this case we cannot guarantee you will receive a gift pack.
                     </li>
@@ -179,7 +179,7 @@
                 <div class="center top-padding">
                     <a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
                         class="btn">REGISTER NOW</a>
-                    <p class="top-padding">Or check out other <a href="/en/races/index.html">races</a>.
+                    <p class="top-padding">Or check out other <a href="/en/races">races</a>.
                     </p>
                 </div>
             </div>
