--- a/sl/proge/index.html
+++ b/sl/proge/index.html
@@ -31,7 +31,7 @@
     <div id="navigation-bar">
         <!--add home button on the left-->
         <div class="home-container">
-            <a href="/index.html" id="logo">T3V</a>
+            <a href="/" id="logo">T3V</a>
         </div>
         <div class="menu-icon-container">
             <button class="menu-icon" data-target="menu">
@@ -50,7 +50,7 @@
                         class="menu-link">Prijava</a></li>
                 <li><a href="/sl/o-nas.html" class="menu-link">O nas</a></li>
                 <li><a href="/sl/kontakt.html" class="menu-link">Kontakt</a></li>
-                <li><a href="/en/races/index.html" class="language-switch menu-link">EN <i
+                <li><a href="/en/races" class="language-switch menu-link">EN <i
                             class="fas fa-globe"></i></a>
                 </li>
             </ul>
