--- a/en/races/go1v-12km.html
+++ b/en/races/go1v-12km.html
@@ -31,7 +31,7 @@
     <div id="navigation-bar">
         <!--add home button on the left-->
         <div class="home-container">
-            <a href="/en/index.html" id="logo">T3V</a> </div>
+            <a href="/en" id="logo">T3V</a> </div>
         <div class="menu-icon-container">
             <button class="menu-icon" data-target="menu">
                 <i class="fas fa-bars" id="menu-button"></i>
@@ -44,7 +44,7 @@
             <a id="close-button">&times;</a>
             <ul class="menu-content">
                 <li><a href="/en/faq.html" class="menu-link">FAQ</a></li>
-                <li><a href="/en/races/index.html" class="menu-link" id="races-button">Races</a></li>
+                <li><a href="/en/races" class="menu-link" id="races-button">Races</a></li>
                 <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Registration</a></li>
                 <li><a href="/en/about.html" class="menu-link">About</a></li>
@@ -141,7 +141,7 @@
                 <div class="center top-padding">
                     <a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
                         class="btn">REGISTER NOW</a>
-                    <p class="top-padding">Or check out other <a href="/en/races/index.html">races</a>.
+                    <p class="top-padding">Or check out other <a href="/en/races">races</a>.
                 </div>
             </div>
         </section>
