--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="navigation-bar" class="fixed-bar clear-bar">
         <!--add home button on the left-->
         <div class="home-container">
-            <a href="index.html" id="logo">T3V</a>
+            <a href="/" id="logo">T3V</a>
         </div>
         <div class="menu-icon-container">
             <button class="menu-icon" data-target="menu">
@@ -46,12 +46,12 @@
 
             <ul class="menu-content">
                 <li><a href="sl/info.html" class="menu-link">Info</a></li>
-                <li><a href="sl/proge/index.html" class="menu-link" id="races-button">Proge</a></li>
+                <li><a href="sl/proge/" class="menu-link" id="races-button">Proge</a></li>
                 <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Prijava</a></li>
                 <li><a href="sl/o-nas.html" class="menu-link">O nas</a></li>
                 <li><a href="sl/kontakt.html" class="menu-link">Kontakt</a></li>
-                <li><a href="/en/index.html" class="language-switch menu-link">EN <i class="fas fa-globe"></i></a>
+                <li><a href="/en" class="language-switch menu-link">EN <i class="fas fa-globe"></i></a>
                 </li>
             </ul>
         </div>
