--- a/sl/info.html
+++ b/sl/info.html
@@ -31,7 +31,7 @@
     <div id="navigation-bar">
         <!--add home button on the left-->
         <div class="home-container">
-            <a href="/index.html" id="logo">T3V</a>
+            <a href="/" id="logo">T3V</a>
         </div>
         <div class="menu-icon-container">
             <button class="menu-icon" data-target="menu">
@@ -45,7 +45,7 @@
             <a id="close-button">&times;</a>
             <ul class="menu-content">
                 <li><a href="info.html" class="menu-link">Info</a></li>
-                <li><a href="/sl/proge/index.html" class="menu-link" id="races-button">Proge</a></li>
+                <li><a href="/sl/proge" class="menu-link" id="races-button">Proge</a></li>
                 <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Prijava</a></li>
                 <li><a href="o-nas.html" class="menu-link">O nas</a></li>
