--- a/sl/proge/go3v-28km.html
+++ b/sl/proge/go3v-28km.html
@@ -31,7 +31,7 @@
     <div id="navigation-bar">
         <!--add home button on the left-->
         <div class="home-container">
-            <a href="/index.html" id="logo">T3V</a> </div>
+            <a href="/" id="logo">T3V</a> </div>
         <div class="menu-icon-container">
             <button class="menu-icon" data-target="menu">
                 <i class="fas fa-bars" id="menu-button"></i>
@@ -44,7 +44,7 @@
             <a id="close-button">&times;</a>
             <ul class="menu-content">
                 <li><a href="/sl/info.html" class="menu-link">Info</a></li>
-                <li><a href="/sl/proge/index.html" class="menu-link" id="races-button">Proge</a></li>
+                <li><a href="/sl/proge" class="menu-link" id="races-button">Proge</a></li>
                 <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Prijava</a></li>
                 <li><a href="/sl/o-nas.html" class="menu-link">O nas</a></li>
@@ -114,8 +114,8 @@
                 <h2>Cena</h2>
                 <ul class="price">
                     <li>do 1. julija 2020: <b>20 €</b></li>
-                    <li>do 30. septembra 2020: <b>30 €</b></li>
-                    <li>do dneva dogodka: <b>40 €</b></li>
+                    <li>do 30. septembra 2020: <b>29 €</b></li>
+                    <li>do dneva dogodka: <b>45 €</b></li>
                     <li class="small-text">* V primeru prostih mest je prijava na dan prireditve možna, vendar vam v tem
                         primeru ne moremo zagotoviti darilnega paketa.</li>
                 </ul>
@@ -207,7 +207,7 @@
                 <div class="center top-padding">
                     <a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
                         class="btn">PRIJAVITE SE</a>
-                    <p class="top-padding">Ali pa si oglejte še ostale <a href="/sl/proge/index.html">proge</a>.
+                    <p class="top-padding">Ali pa si oglejte še ostale <a href="/sl/proge">proge</a>.
                     </p>
                 </div>
             </div>
