--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <a id="close-button">&times;</a>
 
             <ul class="menu-content">
-                <li><a href="sl/info.html" class="menu-link">Info</a></li>
+                <li><a href="sl/info" class="menu-link">Info</a></li>
                 <li><a href="sl/proge/" class="menu-link" id="races-button">Proge</a></li>
                 <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Prijava</a></li>
