remove .html links

--- a/en/faq.html
+++ b/en/faq.html
@@ -44,13 +44,13 @@
         <div id="menu">
             <a id="close-button">&times;</a>
             <ul class="menu-content">
-                <li><a href="faq.html" class="menu-link">FAQ</a></li>
+                <li><a href="faq" class="menu-link">FAQ</a></li>
                 <li><a href="races" class="menu-link" id="races-button">Races</a></li>
                 <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Registration</a></li>
-                <li><a href="about.html" class="menu-link">About</a></li>
-                <li><a href="contact-us.html" class="menu-link">Contact</a></li>
-                <li><a href="/sl/info.html" class="language-switch menu-link">SI <i class="fas fa-globe"></i></a>
+                <li><a href="about" class="menu-link">About</a></li>
+                <li><a href="contact-us" class="menu-link">Contact</a></li>
+                <li><a href="/sl/info" class="language-switch menu-link">SI <i class="fas fa-globe"></i></a>
                 </li>
             </ul>
         </div>
