--- a/en/races/index.html
+++ b/en/races/index.html
@@ -43,12 +43,12 @@
         <div id="menu">
             <a id="close-button">&times;</a>
             <ul class="menu-content">
-                <li><a href="/en/faq.html" class="menu-link">FAQ</a></li>
+                <li><a href="/en/faq" class="menu-link">FAQ</a></li>
                 <li><a href="/en/races" class="menu-link" id="races-button">Races</a></li>
                 <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Registration</a></li>
-                <li><a href="/en/about.html" class="menu-link">About</a></li>
-                <li><a href="/en/contact-us.html" class="menu-link">Contact</a></li>
+                <li><a href="/en/about" class="menu-link">About</a></li>
+                <li><a href="/en/contact-us" class="menu-link">Contact</a></li>
                 <li><a href="/sl/proge" class="language-switch menu-link">SI <i
                             class="fas fa-globe"></i></a></li>
             </ul>
@@ -78,7 +78,7 @@
                         covered! Check out the races we have prepared for you.</p>
                 </li>
                 <li id="race-1">
-                    <a href="./gorica-run.html">
+                    <a href="./gorica-run">
                         <div class="card-content">
                             <h1 class="card-title">Gorica run</h1>
                             <p> <b>4, 10 in 15 km</b> |
@@ -88,7 +88,7 @@
                     </a>
                 </li>
                 <li id="race-2">
-                    <a href="./go1v-12km.html">
+                    <a href="./go1v-12km">
                         <div class="card-content">
                             <h1 class="card-title">Go1V</h1>
                             <p> <b>12 km</b> | <b>700 m</b>
@@ -97,7 +97,7 @@
                     </a>
                 </li>
                 <li id="race-3">
-                    <a href="./go3v-28km.html">
+                    <a href="./go3v-28km">
                         <div class="card-content">
                             <h1 class="card-title">Go3V</h1>
                             <p> <b>28 km</b> | <b>1675 m</b>
@@ -106,7 +106,7 @@
                     </a>
                 </li>
                 <li id="race-4">
-                    <a href="./ultra-58km.html">
+                    <a href="./ultra-58km">
                         <div class="card-content">
                             <h1 class="card-title">Počasna a drzna ultra</h1>
                             <p> <b>58 km</b> | <b>2864 m</b>
