--- a/en/races/ultra-58km.html
+++ b/en/races/ultra-58km.html
@@ -44,13 +44,13 @@
         <div id="menu">
             <a id="close-button">&times;</a>
             <ul class="menu-content">
-                <li><a href="/en/faq.html" class="menu-link">FAQ</a></li>
+                <li><a href="/en/faq" class="menu-link">FAQ</a></li>
                 <li><a href="/en/races" class="menu-link" id="races-button">Races</a></li>
                 <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Registration</a></li>
-                <li><a href="/en/about.html" class="menu-link">About</a></li>
-                <li><a href="/en/contact-us.html" class="menu-link">Contact</a></li>
-                <li><a href="/sl/proge/ultra-58km.html" class="language-switch menu-link">Sl <i
+                <li><a href="/en/about" class="menu-link">About</a></li>
+                <li><a href="/en/contact-us" class="menu-link">Contact</a></li>
+                <li><a href="/sl/proge/ultra-58km" class="language-switch menu-link">Sl <i
                             class="fas fa-globe"></i></a>
             </ul>
         </div>
