--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <li><a href="sl/proge/" class="menu-link" id="races-button">Proge</a></li>
                 <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Prijava</a></li>
-                <li><a href="sl/o-nas.html" class="menu-link">O nas</a></li>
-                <li><a href="sl/kontakt.html" class="menu-link">Kontakt</a></li>
+                <li><a href="sl/o-nas" class="menu-link">O nas</a></li>
+                <li><a href="sl/kontakt" class="menu-link">Kontakt</a></li>
                 <li><a href="/en" class="language-switch menu-link">EN <i class="fas fa-globe"></i></a>
                 </li>
             </ul>
@@ -96,7 +96,7 @@
         <section class="section-a">
             <ul class="image-grid">
                 <li id="race-1">
-                    <a href="./sl/proge/goriski-tek.html">
+                    <a href="./sl/proge/goriski-tek">
                         <div class="card-content">
                             <h1 class="card-title">Goriški tek</h1>
                             <p> <b>4, 10 in 15 km</b> |
@@ -106,7 +106,7 @@
                     </a>
                 </li>
                 <li id="race-2">
-                    <a href="./sl/proge/go1v-12km.html">
+                    <a href="./sl/proge/go1v-12km">
                         <div class="card-content">
                             <h1 class="card-title">Go1V</h1>
                             <p> <b>12 km</b> | <b>700 m</b>
@@ -115,7 +115,7 @@
                     </a>
                 </li>
                 <li id="race-3">
-                    <a href="./sl/proge/go3v-28km.html">
+                    <a href="./sl/proge/go3v-28km">
                         <div class="card-content">
                             <h1 class="card-title">Go3V</h1>
                             <p> <b>28 km</b> | <b>1675 m</b>
@@ -124,7 +124,7 @@
                     </a>
                 </li>
                 <li id="race-4">
-                    <a href="./sl/proge/ultra-58km.html">
+                    <a href="./sl/proge/ultra-58km">
                         <div class="card-content">
                             <h1 class="card-title">Počasna a drzna ultra</h1>
                             <p> <b>58 km</b> | <b>2864 m</b>
@@ -140,10 +140,10 @@
             <div class="content-wrap about center">
                 <p class="landing-page-text">Želite izvedeti več o samem dogodku? <br>
                     Kliknite
-                    <a href="sl/info.html">info</a> ali pa si preberite več
-                    <a href="sl/o-nas.html">o nas</a>.
+                    <a href="sl/info">info</a> ali pa si preberite več
+                    <a href="sl/o-nas">o nas</a>.
                     <br>Niste našli kar ste iskali?
-                    <a href="sl/kontakt.html">Pišite nam</a> in z veseljem vam bomo odgovorili.</p>
+                    <a href="sl/kontakt">Pišite nam</a> in z veseljem vam bomo odgovorili.</p>
                 <div class="icon-container">
                     <a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
                         data-target="menu">
