--- a/sl/proge/index.html
+++ b/sl/proge/index.html
@@ -44,12 +44,12 @@
             <a id="close-button">&times;</a>
 
             <ul class="menu-content">
-                <li><a href="/sl/info.html" class="menu-link">Info</a></li>
+                <li><a href="/sl/info" class="menu-link">Info</a></li>
                 <li><a href="/sl/proge" class="menu-link" id="races-button">Proge</a></li>
                 <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Prijava</a></li>
-                <li><a href="/sl/o-nas.html" class="menu-link">O nas</a></li>
-                <li><a href="/sl/kontakt.html" class="menu-link">Kontakt</a></li>
+                <li><a href="/sl/o-nas" class="menu-link">O nas</a></li>
+                <li><a href="/sl/kontakt" class="menu-link">Kontakt</a></li>
                 <li><a href="/en/races" class="language-switch menu-link">EN <i
                             class="fas fa-globe"></i></a>
                 </li>
@@ -81,7 +81,7 @@
                     </p>
                 </li>
                 <li id="race-1">
-                    <a href="./goriski-tek.html">
+                    <a href="./goriski-tek">
                         <div class="card-content">
                             <h1 class="card-title">Goriški tek</h1>
                             <p> <b>4, 10 in 15 km</b> |
@@ -91,7 +91,7 @@
                     </a>
                 </li>
                 <li id="race-2">
-                    <a href="./go1v-12km.html">
+                    <a href="./go1v-12km">
                         <div class="card-content">
                             <h1 class="card-title">Go1V</h1>
                             <p> <b>12 km</b> | <b>700 m</b>
@@ -100,7 +100,7 @@
                     </a>
                 </li>
                 <li id="race-3">
-                    <a href="./go3v-28km.html">
+                    <a href="./go3v-28km">
                         <div class="card-content">
                             <h1 class="card-title">Go3V</h1>
                             <p> <b>28 km</b> | <b>1675 m</b>
@@ -109,7 +109,7 @@
                     </a>
                 </li>
                 <li id="race-4">
-                    <a href="./ultra-58km.html">
+                    <a href="./ultra-58km">
                         <div class="card-content">
                             <h1 class="card-title">Počasna a drzna ultra</h1>
                             <p> <b>58 km</b> | <b>2864 m</b>
