--- a/en/index.html
+++ b/en/index.html
@@ -45,12 +45,12 @@
             <a id="close-button">&times;</a>
 
             <ul class="menu-content">
-                <li><a href="faq.html" class="menu-link">FAQ</a></li>
+                <li><a href="faq" class="menu-link">FAQ</a></li>
                 <li><a href="/en/races" class="menu-link" id="races-button">Races</a></li>
                 <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Registration</a></li>
-                <li><a href="about.html" class="menu-link">About</a></li>
-                <li><a href="contact-us.html" class="menu-link">Contact</a></li>
+                <li><a href="about" class="menu-link">About</a></li>
+                <li><a href="contact-us" class="menu-link">Contact</a></li>
                 <li><a href="/" class="language-switch menu-link">Sl <i class="fas fa-globe"></i></a>
                 </li>
             </ul>
@@ -95,7 +95,7 @@
         <section class="section-a">
             <ul class="image-grid">
                 <li id="race-1">
-                    <a href="./races/gorica-run.html">
+                    <a href="./races/gorica-run">
                         <div class="card-content">
                             <h1 class="card-title">Gorica run</h1>
                             <p> <b>4, 10 in 15 km</b> |
@@ -105,7 +105,7 @@
                     </a>
                 </li>
                 <li id="race-2">
-                    <a href="./races/go1v-12km.html">
+                    <a href="./races/go1v-12km">
                         <div class="card-content">
                             <h1 class="card-title">Go1V</h1>
                             <p> <b>12 km</b> | <b>700 m</b>
@@ -114,7 +114,7 @@
                     </a>
                 </li>
                 <li id="race-3">
-                    <a href="./races/go3v-28km.html">
+                    <a href="./races/go3v-28km">
                         <div class="card-content">
                             <h1 class="card-title">Go3V</h1>
                             <p> <b>28 km</b> | <b>1675 m</b>
@@ -123,7 +123,7 @@
                     </a>
                 </li>
                 <li id="race-4">
-                    <a href="./races/ultra-58km.html">
+                    <a href="./races/ultra-58km">
                         <div class="card-content">
                             <h1 class="card-title">Počasna a drzna ultra</h1>
                             <p> <b>58 km</b> | <b>2864 m</b>
@@ -138,11 +138,11 @@
         <section class="section-c grid center">
             <div class="content-wrap about">
                 <p>Check-out our
-                    <a href="faq.html">FAQ</a> and
-                    <a href="about.html">About</a>
+                    <a href="faq">FAQ</a> and
+                    <a href="about">About</a>
                     sections to learn more about the race.
                     Still couldn't find what you're looking for?
-                    <br><a href="contact-us.html">Send us an email</a>. We are here for you.
+                    <br><a href="contact-us">Send us an email</a>. We are here for you.
                 </p>
                 <div class="icon-container">
                     <a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
