--- a/sl/kontakt.html
+++ b/sl/kontakt.html
@@ -45,13 +45,13 @@
             <a id="close-button">&times;</a>
 
             <ul class="menu-content">
-                <li><a href="info.html" class="menu-link">Info</a></li>
+                <li><a href="info" class="menu-link">Info</a></li>
                 <li><a href="/sl/proge" class="menu-link" id="races-button">Proge</a></li>
                 <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Prijava</a></li>
-                <li><a href="o-nas.html" class="menu-link">O nas</a></li>
-                <li><a href="kontakt.html" class="menu-link">Kontakt</a></li>
-                <li><a href="/en/contact-us.html" class="language-switch menu-link">EN <i
+                <li><a href="o-nas" class="menu-link">O nas</a></li>
+                <li><a href="kontakt" class="menu-link">Kontakt</a></li>
+                <li><a href="/en/contact-us" class="language-switch menu-link">EN <i
                             class="fas fa-globe"></i></a></li>
             </ul>
         </div>
