--- a/sl/proge/ultra-58km.html
+++ b/sl/proge/ultra-58km.html
@@ -45,13 +45,13 @@
         <div id="menu">
             <a id="close-button">&times;</a>
             <ul class="menu-content">
-                <li><a href="/sl/info.html" class="menu-link">Info</a></li>
+                <li><a href="/sl/info" class="menu-link">Info</a></li>
                 <li><a href="/sl/proge" class="menu-link" id="races-button">Proge</a></li>
                 <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Prijava</a></li>
-                <li><a href="/sl/o-nas.html" class="menu-link">O nas</a></li>
-                <li><a href="/sl/kontakt.html" class="menu-link">Kontakt</a></li>
-                <li><a href="/en/races/ultra-58km.html" class="language-switch menu-link">EN <i
+                <li><a href="/sl/o-nas" class="menu-link">O nas</a></li>
+                <li><a href="/sl/kontakt" class="menu-link">Kontakt</a></li>
+                <li><a href="/en/races/ultra-58km" class="language-switch menu-link">EN <i
                             class="fas fa-globe"></i></a></li>
             </ul>
         </div>
