fix typo in ultra 58

--- a/en/races/ultra-58km.html
+++ b/en/races/ultra-58km.html
@@ -115,7 +115,7 @@
 
                 <h2>Recommended equipment</h2>
                 <ul class="equipment">
-                    <li>1. Pohodne palice</li>
+                    <li>1. Trekking poles</li>
                     <li>2. Energy gels (marked with runner's race number)</li>
                 </ul>
 
