--- a/en/contact-us.html
+++ b/en/contact-us.html
@@ -71,7 +71,7 @@
             </div>
         </header>
         <!--section-C-->
-        <section class="section-c grid flex-item center">
+        <section class="section-c grid flex-item">
             <div class="content-wrap">
                 <p class="opening">We'd love to hear from you.</p>
                 <form id="contact-form" action="https://getform.io/f/80864511-72cb-4a68-99ef-a2fef0de680a"
