--- a/sl/kontakt.html
+++ b/sl/kontakt.html
@@ -70,7 +70,7 @@
             </div>
         </header>
         <!--section-C-->
-        <section class="section-c grid flex-item center">
+        <section class="section-c grid flex-item">
             <div class="content-wrap">
                 <p class="opening">Pišite nam in z veseljem vam bomo odgovorili.</p>
                 <form id="contact-form" action="https://getform.io/f/80864511-72cb-4a68-99ef-a2fef0de680a"
