add register hrefs

--- a/en/faq.html
+++ b/en/faq.html
@@ -46,7 +46,7 @@
             <ul class="menu-content">
                 <li><a href="faq" class="menu-link">FAQ</a></li>
                 <li><a href="races" class="menu-link" id="races-button">Races</a></li>
-                <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
+                <li><a href="https://sportotime.com/slv/dogodek/1171" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Registration</a></li>
                 <li><a href="about" class="menu-link">About</a></li>
                 <li><a href="contact-us" class="menu-link">Contact</a></li>
@@ -93,7 +93,7 @@
                     <li>
                         <a class="toggle" href="javascript:void(0);">Where can I register?</a>
                         <ul class="inner  top-padding">
-                            <p> You can easily register through our <a href="https://sportotime.com/slv/dogodek/964"
+                            <p> You can easily register through our <a href="https://sportotime.com/slv/dogodek/1171"
                                     target="_blank" rel="noopener noreferrer">website</a>. Fees depend on the time of
                                 your registration. You can find more information under each race.
                             </p>
@@ -105,6 +105,14 @@
                             <p> The results will be split in men and women section as well as along three age groups: 18
                                 to 35 years (2002 - 1985), 36 to 50 years (1984 - 1970) 51 years and more (1969 and
                                 earlier ).
+                            </p>
+                        </ul>
+                    </li>
+                    <li>
+                        <a class="toggle" href="javascript:void(0);">Where can I see the results?</a>
+                        <ul class="inner  top-padding">
+                            <p> The results from 2019 are available on <a href="https://www.sportotime.com/eng/event/964"
+                                target="_blank" rel="noopener noreferrer">sporttotime</a>.s
                             </p>
                         </ul>
                     </li>
