--- a/en/races/go1v-12km.html
+++ b/en/races/go1v-12km.html
@@ -45,7 +45,7 @@
             <ul class="menu-content">
                 <li><a href="/en/faq" class="menu-link">FAQ</a></li>
                 <li><a href="/en/races" class="menu-link" id="races-button">Races</a></li>
-                <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
+                <li><a href="https://sportotime.com/eng/race/3578/race_registration" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Registration</a></li>
                 <li><a href="/en/about" class="menu-link">About</a></li>
                 <li><a href="/en/contact-us" class="menu-link">Contact</a></li>
@@ -139,7 +139,7 @@
                 </ul>
 
                 <div class="center top-padding">
-                    <a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
+                    <a href="https://sportotime.com/slv/dogodek/1171" target="_blank" rel="noopener noreferrer"
                         class="btn">REGISTER NOW</a>
                     <p class="top-padding">Or check out other <a href="/en/races">races</a>.
                 </div>
