--- a/sl/info.html
+++ b/sl/info.html
@@ -46,7 +46,7 @@
             <ul class="menu-content">
                 <li><a href="info" class="menu-link">Info</a></li>
                 <li><a href="/sl/proge" class="menu-link" id="races-button">Proge</a></li>
-                <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
+                <li><a href="https://sportotime.com/slv/dogodek/1171" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Prijava</a></li>
                 <li><a href="o-nas" class="menu-link">O nas</a></li>
                 <li><a href="kontakt" class="menu-link">Kontakt</a></li>
@@ -93,7 +93,7 @@
                     <li>
                         <a class="toggle" href="javascript:void(0);">Kje se lahko prijavim?</a>
                         <ul class="inner  top-padding">
-                            <p> Prijavite se lahko <a href="https://sportotime.com/slv/dogodek/964" target="_blank"
+                            <p> Prijavite se lahko <a href="https://sportotime.com/slv/dogodek/1171" target="_blank"
                                     rel="noopener noreferrer">tukaj</a>. Višina prijavnine je odvisna od časovnega
                                 obdobja v katerem se prijavite. Cene za različna obdobja so objavljene pod vsako progo
                                 posebej.
@@ -107,6 +107,14 @@
                                 kategoriji. Prav tako bodo tekmovalci in tekmovalke razvrščeni v tri starostne
                                 kategorije:
                                 18 do 35 let (2002 - 1985), 36 do 50 let (1984 - 1970) in 51 let in več (1969 in prej).
+                            </p>
+                        </ul>
+                    </li>
+                    <li>
+                        <a class="toggle" href="javascript:void(0);">Kje so rezultati tekov?</a>
+                        <ul class="inner  top-padding">
+                            <p> Rezultati tekov iz leta 2019 so dostopni na <a href="https://www.sportotime.com/slv/dogodek/964"
+                                target="_blank" rel="noopener noreferrer">sporttotime</a>.
                             </p>
                         </ul>
                     </li>
