--- a/sl/proge/go3v-28km.html
+++ b/sl/proge/go3v-28km.html
@@ -45,7 +45,7 @@
             <ul class="menu-content">
                 <li><a href="/sl/info" class="menu-link">Info</a></li>
                 <li><a href="/sl/proge" class="menu-link" id="races-button">Proge</a></li>
-                <li><a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
+                <li><a href="https://sportotime.com/slv/dirka/3579/prijava_na_dirko" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Prijava</a></li>
                 <li><a href="/sl/o-nas" class="menu-link">O nas</a></li>
                 <li><a href="/sl/kontakt" class="menu-link">Kontakt</a></li>
@@ -205,7 +205,7 @@
                 </ul>
 
                 <div class="center top-padding">
-                    <a href="https://sportotime.com/slv/dogodek/964" target="_blank" rel="noopener noreferrer"
+                    <a href="https://sportotime.com/slv/dogodek/1171" target="_blank" rel="noopener noreferrer"
                         class="btn">PRIJAVITE SE</a>
                     <p class="top-padding">Ali pa si oglejte še ostale <a href="/sl/proge">proge</a>.
                     </p>
