fix broken links

--- a/en/faq.html
+++ b/en/faq.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Martel+Sans:800&display=swap" rel="stylesheet">
 </head>
 
@@ -46,7 +46,7 @@
             <ul class="menu-content">
                 <li><a href="faq" class="menu-link">FAQ</a></li>
                 <li><a href="races" class="menu-link" id="races-button">Races</a></li>
-                <li><a href="https://sportotime.com/slv/dogodek/1171" target="_blank" rel="noopener noreferrer"
+                <li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Registration</a></li>
                 <li><a href="about" class="menu-link">About</a></li>
                 <li><a href="contact-us" class="menu-link">Contact</a></li>
