--- a/en/races/ultra-58km.html
+++ b/en/races/ultra-58km.html
@@ -46,7 +46,7 @@
             <ul class="menu-content">
                 <li><a href="/en/faq" class="menu-link">FAQ</a></li>
                 <li><a href="/en/races" class="menu-link" id="races-button">Races</a></li>
-                <li><a href="https://sportotime.com/eng/race/3580/race_registration" target="_blank" rel="noopener noreferrer"
+                <li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Registration</a></li>
                 <li><a href="/en/about" class="menu-link">About</a></li>
                 <li><a href="/en/contact-us" class="menu-link">Contact</a></li>
@@ -177,7 +177,7 @@
                 </ul>
 
                 <div class="center top-padding">
-                    <a href="https://sportotime.com/slv/dogodek/1171" target="_blank" rel="noopener noreferrer"
+                    <a href="https://sportotime.com/eng/race/3580/race_registration" target="_blank" rel="noopener noreferrer"
                         class="btn">REGISTER NOW</a>
                     <p class="top-padding">Or check out other <a href="/en/races">races</a>.
                     </p>
