--- a/en/races/index.html
+++ b/en/races/index.html
@@ -45,7 +45,7 @@
             <ul class="menu-content">
                 <li><a href="/en/faq" class="menu-link">FAQ</a></li>
                 <li><a href="/en/races" class="menu-link" id="races-button">Races</a></li>
-                <li><a href="https://sportotime.com/slv/dogodek/1171" target="_blank" rel="noopener noreferrer"
+                <li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
                         class="menu-link">Registration</a></li>
                 <li><a href="/en/about" class="menu-link">About</a></li>
                 <li><a href="/en/contact-us" class="menu-link">Contact</a></li>
