--- a/en/races/index.html
+++ b/en/races/index.html
@@ -81,8 +81,8 @@
                     <a href="./gorica-run">
                         <div class="card-content">
                             <h1 class="card-title">Gorica run</h1>
-                            <p> <b>4, 10 in 15 km</b> |
-                                <b>Charity run</b>
+                            <p> 4, 10 in 15 km |
+                                Charity run
                             </p>
                         </div>
                     </a>
@@ -91,7 +91,7 @@
                     <a href="./go1v-12km">
                         <div class="card-content">
                             <h1 class="card-title">Go1V</h1>
-                            <p> <b>12 km</b> | <b>700 m</b>
+                            <p> 12 km | 700 m
                             </p>
                         </div>
                     </a>
@@ -100,7 +100,7 @@
                     <a href="./go3v-28km">
                         <div class="card-content">
                             <h1 class="card-title">Go3V</h1>
-                            <p> <b>28 km</b> | <b>1675 m</b>
+                            <p> 28 km | 1675 m
                             </p>
                         </div>
                     </a>
@@ -109,7 +109,7 @@
                     <a href="./ultra-58km">
                         <div class="card-content">
                             <h1 class="card-title">Počasna a drzna ultra</h1>
-                            <p> <b>58 km</b> | <b>2864 m</b>
+                            <p> 58 km | 2864 m
                             </p>
                         </div>
                     </a>
