--- a/en/index.html
+++ b/en/index.html
@@ -98,8 +98,8 @@
                     <a href="./races/gorica-run">
                         <div class="card-content">
                             <h1 class="card-title">Gorica run</h1>
-                            <p> <b>4, 10 in 15 km</b> |
-                                <b>Charity run</b>
+                            <p> 4, 10 in 15 km |
+                                Charity run
                             </p>
                         </div>
                     </a>
@@ -108,7 +108,7 @@
                     <a href="./races/go1v-12km">
                         <div class="card-content">
                             <h1 class="card-title">Go1V</h1>
-                            <p> <b>12 km</b> | <b>700 m</b>
+                            <p> 12 km | 700 m
                             </p>
                         </div>
                     </a>
@@ -117,7 +117,7 @@
                     <a href="./races/go3v-28km">
                         <div class="card-content">
                             <h1 class="card-title">Go3V</h1>
-                            <p> <b>28 km</b> | <b>1675 m</b>
+                            <p> 28 km | 1675 m
                             </p>
                         </div>
                     </a>
@@ -126,7 +126,7 @@
                     <a href="./races/ultra-58km">
                         <div class="card-content">
                             <h1 class="card-title">Počasna a drzna ultra</h1>
-                            <p> <b>58 km</b> | <b>2864 m</b>
+                            <p> 58 km | 2864 m
                             </p>
                         </div>
                     </a>
