--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                     <a href="./sl/proge/goriski-tek">
                         <div class="card-content">
                             <h1 class="card-title">Goriški tek</h1>
-                            <p> <b>4, 10 in 15 km</b> |
-                                <b>Dobrodelni tek</b>
+                            <p> 4, 10 in 15 km |
+                                Dobrodelni tek
                             </p>
                         </div>
                     </a>
@@ -109,7 +109,7 @@
                     <a href="./sl/proge/go1v-12km">
                         <div class="card-content">
                             <h1 class="card-title">Go1V</h1>
-                            <p> <b>12 km</b> | <b>700 m</b>
+                            <p> 12 km | 700 m
                             </p>
                         </div>
                     </a>
@@ -118,7 +118,7 @@
                     <a href="./sl/proge/go3v-28km">
                         <div class="card-content">
                             <h1 class="card-title">Go3V</h1>
-                            <p> <b>28 km</b> | <b>1675 m</b>
+                            <p> 28 km | 1675 m
                             </p>
                         </div>
                     </a>
@@ -127,7 +127,7 @@
                     <a href="./sl/proge/ultra-58km">
                         <div class="card-content">
                             <h1 class="card-title">Počasna a drzna ultra</h1>
-                            <p> <b>58 km</b> | <b>2864 m</b>
+                            <p> 58 km | 2864 m
                             </p>
                         </div>
                     </a>
