--- a/sl/proge/index.html
+++ b/sl/proge/index.html
@@ -84,8 +84,8 @@
                     <a href="./goriski-tek">
                         <div class="card-content">
                             <h1 class="card-title">Goriški tek</h1>
-                            <p> <b>4, 10 in 15 km</b> |
-                                <b>Dobrodelni tek</b>
+                            <p> 4, 10 in 15 km |
+                                Dobrodelni tek
                             </p>
                         </div>
                     </a>
@@ -94,7 +94,7 @@
                     <a href="./go1v-12km">
                         <div class="card-content">
                             <h1 class="card-title">Go1V</h1>
-                            <p> <b>12 km</b> | <b>700 m</b>
+                            <p> 12 km | 700 m
                             </p>
                         </div>
                     </a>
@@ -103,7 +103,7 @@
                     <a href="./go3v-28km">
                         <div class="card-content">
                             <h1 class="card-title">Go3V</h1>
-                            <p> <b>28 km</b> | <b>1675 m</b>
+                            <p> 28 km | 1675 m
                             </p>
                         </div>
                     </a>
@@ -112,7 +112,7 @@
                     <a href="./ultra-58km">
                         <div class="card-content">
                             <h1 class="card-title">Počasna a drzna ultra</h1>
-                            <p> <b>58 km</b> | <b>2864 m</b>
+                            <p> 58 km | 2864 m
                             </p>
                         </div>
                     </a>
