downsize font to 1.2rem

--- a/en/faq.html
+++ b/en/faq.html
@@ -104,7 +104,7 @@
                         <ul class="inner  top-padding">
                             <p> The results will be split in men and women section as well as along three age groups: 18
                                 to 35 years (2002 - 1985), 36 to 50 years (1984 - 1970) 51 years and more (1969 and
-                                earlier ).
+                                earlier).
                             </p>
                         </ul>
                     </li>
@@ -112,7 +112,7 @@
                         <a class="toggle" href="javascript:void(0);">Where can I see the results?</a>
                         <ul class="inner  top-padding">
                             <p> The results from 2019 are available on <a href="https://www.sportotime.com/eng/event/964"
-                                target="_blank" rel="noopener noreferrer">sporttotime</a>.s
+                                target="_blank" rel="noopener noreferrer">sporttotime</a>.
                             </p>
                         </ul>
                     </li>
