change hero image and menu colour

--- a/en/faq.html
+++ b/en/faq.html
@@ -93,7 +93,7 @@
                     <li>
                         <a class="toggle" href="javascript:void(0);">Where can I register?</a>
                         <ul class="inner  top-padding">
-                            <p> You can easily register through our <a href="https://sportotime.com/slv/dogodek/1171"
+                            <p> You can easily register through our <a href="https://sportotime.com/eng/event/1171"
                                     target="_blank" rel="noopener noreferrer">website</a>. Fees depend on the time of
                                 your registration. You can find more information under each race.
                             </p>
@@ -125,7 +125,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a class="toggle" href="javascript:void(0);">Splošni pogoji</a>
+                        <a class="toggle" href="javascript:void(0);">General conditions</a>
                         <ul class="inner  top-padding">
                             <li>1. Udeleženci so nezgodno zavarovani pri Zavarovalnici Sava.</li>
                             <li>2. Tekači morajo biti vso pot na uradni progi. Odgovornost vsakega tekača je, da pozna
