change green colour

--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
         <!--section-C-->
         <section class="section-c grid">
             <div class="content-wrap about center">
-                <p class="landing-page-text">Želite izvedeti več o samem dogodku? <br>
+                <p class="landing-page-text">
                     Kliknite
-                    <a href="sl/info">info</a> ali pa si preberite več
-                    <a href="sl/o-nas">o nas</a>.
+                    <a href="sl/info">Info</a> ali pa si preberite
+                    <a href="sl/o-nas">O nas</a>, če želite izvedeti več o dogodku.
                     <br>Niste našli kar ste iskali?
                     <a href="sl/kontakt">Pišite nam</a> in z veseljem vam bomo odgovorili.</p>
                 <div class="icon-container">
